<resources>
    <string name="app_name">StaySense</string>

    <string name="login_msg">Welcome to StaySense!</string>
    <string name="login_desc">Please enter your address below to start using StaySense.</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="username_signup">Enter Username</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="create_acc">Create an account?</string>
    <string name="signup_desc">Please put your information below to create an account.</string>

    <string name="get_started">Get Started</string>
    <string name="welcome_text">Optimize customer retention with accurate and fast AI-based churn prediction!</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="welcome_user">Welcome, user</string>
    <string name="dashboard">Dashboard</string>
    <string name="hello_predict_fragment">predict fragment</string>
    <string name="predict">Predict</string>
    <string name="account">account</string>
    <string name="word_cloud">Word Cloud</string>
    <string name="total_customers_title">Total Customers</string>
    <string name="total_cust">1908</string>
    <string name="total_impression_title">Total Impressions</string>
    <string name="total_impression">2009</string>
    <string name="churn_chart">Churn Chart</string>
    <string name="blobs">blobs</string>
    <string name="churn_history">Churn History</string>
    <string name="churn_rate">Churn Rate</string>
    <string name="langsung_masuk">Langsung masuk</string>

    <string name="tab_text_1">Churn Chart</string>
    <string name="tab_text_2">Churn Rate</string>
    <string name="total_churn">Total Churn</string>
    <string name="logout">Logout</string>
    <string name="predict_churn">Predict Churn</string>
    <string name="input_data_costumer">Input Data Costumer</string>
    <string name="csv_file">csv file</string>
    <string name="upload_file">Upload File</string>
    <string name="supported_files">Supported files are .csv, .xls, .xlsx</string>
    <string name="upload">Upload</string>
    <string name="or">OR</string>
    <string name="profile">Profile</string>
    <string name="username">username</string>
    <string name="user_email">User Email</string>
    <string name="account_settings">Account Settings</string>
    <string name="enter_word">Enter word</string>
    <string name="input_data_manual">Input Data Manual</string>
    <string name="input_manual_instruction">ⓘ Fill out the following form to predict whether a customer will churn or not. Please complete all fields with the appropriate data. The data you enter will help the system to analyze accurately.</string>
    <string name="input_churn_reason">Input Churn Reason</string>
    <string name="submit">Submit</string>
    <string name="personal_information">Personal Information</string>
    <string name="password_and_security">Password and Security</string>
    <string name="history">History</string>
    <string name="predict_history">Predict History</string>
    <string name="result">Result</string>
    <string name="churnrate_title">Churn Rate:</string>
    <string name="churn_rate_result">0%</string>
    <string name="is_churn">Is Churn</string>
    <string name="total_customer">Total Customer</string>
    <string name="totalcust">0</string>
    <string name="tot_cust_churn">0</string>
    <string name="title_tot_costumer_churn">Costumer Churn:</string>
    <string name="costumers_not_churn_title">Costumers Not Churn:</string>
    <string name="tot_cust_not_churn">0</string>
    <string name="message_summary">Message Summary</string>
    <string name="ok">OK</string>
    <string name="detail">Detail</string>
    <string name="exit_to_main">exit to main</string>

    <string name="personal_information_username">Username will appear here</string>
    <string name="personal_information_full_name">Full Name</string>
    <string name="personal_information_full_name2">Enter full name</string>
    <string name="personal_information_role">Role</string>
    <string name="personal_information_role2">Enter your role</string>
    <string name="personal_information_email">Email</string>
    <string name="personal_information_email2">User email will appear here</string>
    <string name="save">Save</string>

    <string name="about_staysense">About StaySense</string>
    <string name="description_staysense">Staysense is a smart app designed to help companies identify customers at risk of churning.
        It provides data-driven insights to support strategic decision-making,
        allowing companies to improve customer retention and strengthen business relationships.</string>

    <string name="description_security">Make sure the password you create is secure and hard to guess.
        This will replace your old password, so make sure you remember your new password well before proceeding.</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="New_password">New password</string>
    <string name="Retype_new_password">Re-type new password</string>

    <string name="age">Age</string>
    <string name="input_age">Input age</string>
    <string name="number_of_dependents">Number of Dependents</string>
    <string name="input_number_of_dependents">Input number of dependents</string>
    <string name="city">City</string>
    <string name="input_city">Input city</string>
    <string name="Tenure_in_months">Tenure in Months</string>
    <string name="input_tenure_in_months">Input tenure in months</string>
    <string name="internet_service">Internet Service</string>
    <string name="input_internet_service">Input internet service</string>
    <string name="online_security">Online Security</string>
    <string name="input_online_security">Input online security</string>
    <string name="online_backup">Online Backup</string>
    <string name="input_online_backup">Input online backup</string>
    <string name="device_protection_plan">Device Protection Plan</string>
    <string name="input_device_protection_plan">Input device protection plan</string>
    <string name="premium_tech_support">Premium Tech Support</string>
    <string name="input_premium_tech_support">Input premium tech support</string>
    <string name="streaming_tv">Streaming TV</string>
    <string name="input_streaming_tv">Input streaming TV</string>
    <string name="streaming_movies">Streaming Movies</string>
    <string name="input_streaming_movies">Input streaming movies</string>
    <string name="streaming_music">Streaming Music</string>
    <string name="input_streaming_music">Input streaming music</string>
    <string name="unlimited_data">Unlimited Data</string>
    <string name="input_unlimited_data">Input Unlimited Data</string>
    <string name="contract">Contract</string>
    <string name="input_contract">Input contract</string>
    <string name="payment_method">Payment Method</string>
    <string name="input_payment_method">Input payment method</string>
    <string name="monthly_charge">Monthly Charge</string>
    <string name="input_monthly_charge">Input monthly charge</string>
    <string name="total_charges">Total Charges</string>
    <string name="input_total_charges">Input total charges</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="input_total_revenue">Input total revenue</string>
    <string name="satisfaction_score">Satisfaction Score</string>
    <string name="input_satisfaction_score">Input satisfaction score</string>
    <string name="churn_score">Churn Score</string>
    <string name="input_churn_score">Input churn score</string>
    <string name="cltv">CLTV</string>
    <string name="input_cltv">Input CLTV</string>
    <string name="customer_churn_probability">Probability</string>

    <string-array name="list_payment_method">
        <item>Bank Withdrawal</item>
        <item>Credit Card</item>
        <item>Mailed Check</item>
    </string-array>

    <string-array name="list_contract">
        <item>Month-to-Month</item>
        <item>One Year</item>
        <item>Two Year</item>
    </string-array>

    <string-array name="isBoolean">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="timestamp">Timestamp here</string>
    <string name="source">Source will be displayed here</string>
    <string name="appear_here">Will appear here</string>
    <string name="total_predicted">Total Predictions</string>
    <string name="colon">:</string>
    <string name="solution">Recomendation</string>
    <string name="no_files">Choose a file</string>
    <string name="clustering">Clustering</string>

    <string name="manual_input">Manual Input</string>
    <string name="file_upload">File Upload</string>
    <string name="date_time">DATE TIME :</string>
    <string name="message">MESSAGE :</string>
    <string name="data_customer">DATA CUSTOMER :</string>
    <string name="attribute">Attribute</string>
    <string name="Result">Result</string>
    <string name="csv_file_details">CSV FILE DETAILS :</string>
    <string name="churn_count">Churn Count</string>">
    <string name="not_churn_count">Not Churn Count</string>
    <string name="downolad_csv">Download the CSV file via the link below :</string>
    <string name="delete_all_history">Delete All History</string>
    <string name="ask_delete_all_history">Are you sure want to delete all history?</string>
    <string name="delete_history">Delete History</string>
    <string name="agree">Yes</string>
    <string name="history_deleted">History deleted succesfully</string>
    <string name="disagree">No</string>
    <string name="confirm_logout">Are you sure want to Logout?</string>

</resources>