<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.result.ResultFragment"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="12dp"
        android:backgroundTint="@color/light_grayish_yellow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result"
                style="@style/title"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_message_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/message_summary"
                android:maxLines="2" />

            <TextView
                android:id="@+id/tv_detail_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/detail"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/tr_churnrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_totalcust_title_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/total_customer"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_totalcust_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/totalcust" />

                </TableRow>

                <TableRow
                    android:id="@+id/tr_tot_cust_churn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_tot_cust_churn_title_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/title_tot_costumer_churn"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_tot_cust_churn_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/tot_cust_churn" />

                </TableRow>

                <TableRow
                    android:id="@+id/tr_tot_cust_not_churn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_tot_cust_not_churn_title_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/costumers_not_churn_title"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_tot_cust_not_churn_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/tot_cust_not_churn" />

                </TableRow>

                <TableRow
                    android:id="@+id/tr_churnrate_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_churnrate_result_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/churn_rate"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_churnrate_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/churn_rate_result" />

                </TableRow>


            </TableLayout>


            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="4dp"
                android:text="@string/ok"/>


        </LinearLayout>



    </androidx.cardview.widget.CardView>




</FrameLayout>