<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.PersonalInformationFragment">

    <TextView
        android:id="@+id/tv_personal_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/personal_information"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_personal_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_personal_information"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:src="@drawable/account_circle" />

        <TextView
            android:id="@+id/tv_username_personal_information"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/et_username_personal_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="48dp"
            android:inputType="text"
            android:importantForAutofill="no"
            android:hint="@string/personal_information_username" />

        <TextView
            android:id="@+id/tv_full_name_personal_information"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/personal_information_full_name"/>

        <EditText
            android:id="@+id/et_full_name_personal_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="48dp"
            android:inputType="text"
            android:importantForAutofill="no"
            android:hint="@string/personal_information_full_name2" />

        <TextView
            android:id="@+id/tv_role_personal_information"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/personal_information_role"/>

        <EditText
            android:id="@+id/et_role_personal_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="48dp"
            android:inputType="text"
            android:importantForAutofill="no"
            android:hint="@string/personal_information_full_name2" />

        <TextView
            android:id="@+id/tv_email_personal_information"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/personal_information_email"/>

        <EditText
            android:id="@+id/et_email_personal_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="48dp"
            android:inputType="text"
            android:importantForAutofill="no"
            android:hint="@string/personal_information_email2" />

        <Button
            android:id="@+id/btn_save_personal_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="8dp"
            android:text="@string/save"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>