<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.SignupActivity">

    <LinearLayout
        android:id="@+id/ll_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_logo_signup"
            android:layout_width="152dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:layout_marginTop="9dp"
            android:src="@drawable/zstaysense" />

        <TextView
            android:id="@+id/tv_signup_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_msg"
            android:layout_marginTop="30dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_signup_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/signup_desc"
            android:maxLines="2"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_username_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_signup"
                android:importantForAutofill="no"
                android:inputType="text"
                android:drawableStart="@drawable/account_circle"
                android:drawablePadding="4dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_email_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="4dp"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/et_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="4dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_password_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:endIconMode="password_toggle">


            <EditText
                android:id="@+id/et_confirm_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:drawableStart="@drawable/zconfirmpass"
                android:drawablePadding="4dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cornerRadius = "10dp"
            android:backgroundTint="@color/dark_cyan"
            android:text="@string/sign_up"/>

        <LinearLayout
            android:id="@+id/ll_haveacc_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_haveacc_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/already_have_an_account"/>

            <TextView
                android:id="@+id/tv_redirect_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:textColor="@color/dark_cyan"
                android:text="@string/login"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>