<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.predict.UploadFileFragment"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/ll_upload_file"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_dashed_border"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/iv_csv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/csv_file"
                android:src="@drawable/zcsv_file" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/upload_file" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_supported_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/supported_files"
            android:layout_marginTop="8dp"
            android:alpha="0.65"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_upload_file" />

</androidx.constraintlayout.widget.ConstraintLayout>